[package]
name = "stdya"
version = "0.1.0"
edition = "2024"



[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime for non-blocking IO
tokio = { version = "1.0", features = ["full"] }
# Persistence for Block Storage and WAL
rocksdb = "0.21" 
# Async-safe synchronization primitives
tokio-util = { version = "0.7", features = ["codec"] }
